Fix table align (#458)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -152,7 +152,10 @@
 }
 
 .theme-doc-markdown > table {
-  display: table;
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+  overflow-x: auto;
 }
 
 .theme-doc-markdown > pre,
@@ -198,7 +201,12 @@
 }
 
 .theme-doc-markdown table {
+  display: block;
   font-size: .95rem;
+  margin-left: 0;
+  margin-right: auto;
+  max-width: 100%;
+  overflow-x: auto;
 }
 
 .theme-doc-markdown th {
